# rrm

./: .rosinstall  .rosinstall.bak  README.md
abb_camera_simulation/: package.xml
abb_cv7_moveit/: package.xml
abb_irb4600_moveit_config/: package.xml
abb_launch/: CMakeLists.txt  package.xml
abb_launch/launch/: abb_launch_cv11.launch
abb_resources/: CHANGELOG.rst  CMakeLists.txt  package.xml
abb_resources/urdf/: common_colours.xacro  common_materials.xacro
abb_scanner/: CMakeLists.txt  package.xml
abb_scanner/launch/: abb_scanner.launch
abb_scanner/src/: LaserScanToPointCloud.cpp  scanner_node.cpp
rrm_cv5_move_interface_sarsekeyev/: CMakeLists.txt  package.xml
rrm_cv5_move_interface_sarsekeyev/launch/: move_group_interface_sarsekeyev.launch
rrm_cv5_move_interface_sarsekeyev/src/: move_group_interface_sarsekeyev.cpp
rrm_cv5_sarsekeyev/: .setup_assistant  CMakeLists.txt  package.xml
rrm_cv5_sarsekeyev/config/: abb_irb4600_20_250.srdf  ros_controllers.yaml
rrm_cv5_sarsekeyev/launch/: abb_irb4600_20_250_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo2.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rrm_cv5_sarsekeyev1/: .setup_assistant  CMakeLists.txt  package.xml
rrm_cv5_sarsekeyev1/config/: abb_irb4600_20_250.srdf  fake_controllers.yaml  ompl_planning.yaml
rrm_cv5_sarsekeyev1/launch/: abb_irb4600_20_250_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo (copy).launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  setup_assistant.launch  (+4 more)
